feat: queue, song counts, metadata usage:
* lots of new features that need polishing/refactoring
